<resources>
    <string name="app_name">TopiTalk</string>
    <string name="username">Gebruikersnaam</string>
    <string name="password">Wachtwoord</string>
    <string name="bt_login">Login</string>
    <string name="new_account"><u>Nog geen account? Klik hier!</u></string>
    <string name="name">Voornaam</string>
    <string name="surname">Achternaam</string>
    <string name="bt_register">Registreer</string>
    <string name="tv_postscore_placeholder">00</string>
    <string name="tv_date_placeholder">24/05/2016 15:11</string>
    <string name="tv_posttitle_placeholder">Post title placeholder</string>
    <string name="bt_logout">Logout</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="tv_new_post">Nieuw bericht</string>
    <string name="et_write_comment">Schrijf een reactie...</string>
    <string name="save_credentials">Bewaar gegevens</string>
    <string name="new_comment">Nieuwe reactie</string>
</resources>
